# vehicle-insurance-ml

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.github/workflow/: ci.yml
config/: mlflow.yaml
infrastructure/: Dockerfile  docker-compose.yml
src/config/: model_params.yaml
src/data_ingestion/: etl_pipeline.py  ingest.py
src/features_engineering/: features.py
src/models/: predict_model.py  train.py  train_model.py
src/visualization/: visualize.py
